--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
   </head>
   <body>
     <script src="script.js"></script>
+    <table class="tablo">
+      <tr class="tablo">
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>Josh</td>
+        <td>Smith</td>
+        <td>64</td>
+      </tr>
+    </table>
+    <p class="para">this is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and</p>
+    <img src="/images/duckee.png" class="imag">
   </body>
 </html>
