added alt text to image, added enter space on css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       </tr>
     </table>
     <p class="para">this is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and textthis is a paragrpa of texte and text and</p>
-    <img src="/images/duckee.png" class="imag">
+    <img src="/images/duckee.png" class="imag" alt="picture of duck">
   </body>
 </html>
